[package]
name = "web_service_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"]}

# Axum
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"]}
tower-cookies = "0.9"

# Serde / json
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"